testsuite/gnatprove/tests/O612-034__transform/test.out
test.adb:5:22: high: assertion might fail, cannot prove 1 <= X [possible fix: subprogram at test.ads:3 should mention X in a precondition]
test.ads:3:14: warning: subprogram "P" has no effect
6
test.adb:5:22: high: assertion might fail, cannot prove 1 <= X [possible fix: subprogram at test.ads:3 should mention X in a precondition]
test.ads:3:14: warning: subprogram "P" has no effect
Error while reading shape file: shapes files corrupted (space missing), ignored. Continuing without shapes.
8
